# jpop-songs

./: Cargo.toml
.github/workflows/: release.yml
src/: main.rs
templates/: songs.html
