[package]
name = "jpop-songs"
version = "0.1.1"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = { version = "0.8.1" }
axum-prometheus = "0.8.0"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"], default-features=false }
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["derive"]}
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19" }
